WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133626
[SVG] Subpixel rendering: Mask with transformed text does not render.
https://bugs.webkit.org/show_bug.cgi?id=133626
Summary
[SVG] Subpixel rendering: Mask with transformed text does not render.
alan
Reported
2014-06-08 18:37:47 PDT
<svg xmlns="
http://www.w3.org/2000/svg
" xmlns:xlink="
http://www.w3.org/1999/xlink
" width="100px" height="100px"> <defs xmlns="
http://www.w3.org/2000/svg
"> <mask id="mask"> <text id='weather' class="text" fill="#fff" transform="rotate(40 0 0)" x="50%" y='50%'>cutout</text> </mask> </defs> <rect class='bg' width="100%" height="100%" x="0" y="0" mask="url(#mask)"/> </svg>
Attachments
Patch
(5.30 KB, patch)
2014-06-08 19:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-06-08 18:38:06 PDT
<
rdar://problem/17123070
>
alan
Comment 2
2014-06-08 19:47:44 PDT
Created
attachment 232694
[details]
Patch
WebKit Commit Bot
Comment 3
2014-06-09 09:01:49 PDT
Comment on
attachment 232694
[details]
Patch Clearing flags on attachment: 232694 Committed
r169689
: <
http://trac.webkit.org/changeset/169689
>
WebKit Commit Bot
Comment 4
2014-06-09 09:01:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug