[SVG] Subpixel rendering: Mask with transformed text does not render. https://bugs.webkit.org/show_bug.cgi?id=133626 <rdar://problem/17123070>

Reviewed by Simon Fraser.

Replace IntRect::infiniteRect() with Layout::infiniteRect(). A transformed IntRect::infiniteRect()
overflows and produces invalid repaint rect. -also remove IntRect::infiniteRect() as no one calls
it anymore.

Source/WebCore:
Tests: svg/masking/mask-transformed-text-missing-expected.svg
       svg/masking/mask-transformed-text-missing.svg

* platform/graphics/IntRect.h:
(WebCore::IntRect::infiniteRect): Deleted.
* rendering/svg/SVGRenderingContext.cpp:
(WebCore::SVGRenderingContext::renderSubtreeToImageBuffer):

LayoutTests:
* svg/masking/mask-transformed-text-missing-expected.svg: Added.
* svg/masking/mask-transformed-text-missing.svg: Added.


Canonical link: https://commits.webkit.org/151603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169689 268f45cc-cd09-0410-ab3c-d52691b4dbfc