Source/WebCore/platform/graphics/IntRect.h
@@ -196,9 +196,6 @@ public:
 
     void dump(WTF::PrintStream& out) const;
 
-    static IntRect infiniteRect();
-    bool isInfinite() const;
-
 private:
     IntPoint m_location;
     IntSize m_size;
@@ -226,17 +223,6 @@ inline bool operator==(const IntRect& a, const IntRect& b)
 inline bool operator!=(const IntRect& a, const IntRect& b)
 {
     return a.location() != b.location() || a.size() != b.size();
-}
-
-inline IntRect IntRect::infiniteRect()
-{
-    static IntRect infiniteRect(-LayoutUnit::max() / 2, -LayoutUnit::max() / 2, LayoutUnit::max(), LayoutUnit::max());
-    return infiniteRect;
-}
-
-inline bool IntRect::isInfinite() const
-{
-    return *this == infiniteRect();
 }
 
 #if USE(CG)
